# silver-crypto

./: Cargo.toml  README.md
src/: encryption.rs  hashing.rs  keys.rs  lib.rs  mining.rs  signatures.rs
tests/: metamask_compatibility.rs  secp256k1_test.rs
