[package]
name = "silver-crypto"
version = "2.5.4"
edition = "2021"
rust-version = "1.90"
authors = ["SilverBitcoin Team <team@silverbitcoin.org>"]
license = "Apache-2.0"
repository = "https://github.com/silverbitcoin/silverbitcoin"
homepage = "https://silverbitcoin.org"
keywords = ["blockchain", "cryptocurrency", "quantum-resistant", "consensus"]
categories = ["cryptography", "network-programming"]
description = "Quantum-resistant cryptographic primitives for SilverBitcoin 512-bit blockchain"

[dependencies]
# Core
silver-core = { path = "../silver-core" }

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0"
zeroize = { version = "1.7", features = ["derive"] }
bytes = "1.5"
hex = "0.4"
base64 = "0.22"

# Post-Quantum Cryptography (512-bit quantum-resistant)
pqcrypto-sphincsplus = "0.7"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

# Classical Cryptography (512-bit)
p521 = "0.13"
sha2 = "0.10"
hmac = "0.12"

# Encryption (512-bit)
argon2 = { version = "0.5", features = ["std"] }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
pbkdf2 = "0.12"

# Key Management (512-bit)
rand = { version = "0.8", features = ["std", "std_rng"] }
rand_core = { version = "0.6", features = ["std"] }
getrandom = "0.2"

# Post-Quantum Key Encapsulation (512-bit)
pqcrypto-kyber = "0.7"

# HD Wallet (512-bit entropy)
bip39 = "2.0"

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tempfile = "3.8"
